@@ -1,3 +1,5 @@
+corrected error raised when login does not exist : added exec in getLoginCreationStatement
+
 ---------------------------------
 SecurityApplier 1.0.2, XXXX
 ---------------------------------
